static/sass/pages/_frontpage.scss
// Publication cover sections
.frontpage-section {
  background: $color-light-blue;
  margin: 120px 0;
  cursor: default;
  font-size: 16px;

  &:after {
    content: "";
    display: table;
    clear: both;
  }

  &--white {
    background-color: white;
  }

  &--margin-sm {
    margin-top: $line-height * 2 - 40px;
  }

  &--padding {
    padding: 40px 0;
  }

  // component ultimo momento
  &.live {
    margin-top: 0;

    .row {
      .col {
        &.s12 {
          + .s12 {
            @media (max-width: 992px) {
              margin-top: 20px;
            }
          }
        }
      }
    }
  }

  // Frontpage section without title pill.
  &--no-header {
    padding: 50px 0 26px 0;

    .container .row {
      margin-bottom: 0;
    }
  }

  header.section-title {
    text-align: center;
    margin-bottom: 5vh;

    h2 {
      position: relative;
      bottom: 16px;
      font-size: 16px;
      text-transform: uppercase;
      font-weight: 500;
      padding: 9px 11px 6px 11px;
      line-height: 1;
      border-radius: 5px;
      margin: 0;
    }

    i {
      font-size: 20px;
    }
  }

  .card {
    height: 100%;

    .card-content {
      margin-bottom: 36px;
    }
  }

  &--ad {
    margin-top: 0;
  }
  .ld-grid-main--two-cols {
    margin-bottom: 0;

    + .footer-section {
      margin-top: 40px;
    }
  }
  @media (max-width: 1000px) {
    .ld-grid-main {
      display: block;
      margin-bottom: 60px;

      .ld-grid-area.area-main {
        margin-bottom: 48px;
      }
    }
    .ld-grid-simple {
      display: block;

      .ld-grid-simple__area + .ld-grid-simple__area {
        margin-top: 24px;
      }
    }
  }

  .multi-buttons {
    .ld-btn,
    .btn,
    .ut-btn {
      margin-right: 0;
      margin-bottom: 20px;
      vertical-align: top;
      margin-right: 10px;

      @media (min-width: 450px) and (max-width: 475px) {
        margin-left: 10px;
      }

      + .ld-btn {
        margin-bottom: 0;
        margin-left: 0;

        @media (min-width: 476px) {
          margin-right: 0;
        }
      }

      + .btn {
        margin-left: 0;
        margin-bottom: 0;

        @media (min-width: 476px) {
          margin-right: 0;
        }
      }

      + .ut-btn {
        margin-left: 0;
        margin-bottom: 0;

        @media (min-width: 476px) {
          margin-right: 0;
        }
      }
    }
  }
  .section-footer {
    background: #fff;
    text-align: center;
    padding: 20px 0;

    a {
      font-size: 12px;
      text-decoration: underline;
      display: inline-block;

      svg {
        vertical-align: middle;
        margin-left: 5px;
      }

      &:hover {
        text-decoration: none;
      }
    }
  }
}

@media #{$small-and-down} {
  .frontpage.homepage {
    #main-header.install-pwa {
      .nav-wrapper {
        justify-content: unset;
      }
      .header-logo.emergentes {
        img {
          margin-left: 15px;
        }
      }
      .instalar-app {
        min-width: 121px;
        margin: 13px 0 15px 15px;
        line-height: 28px !important;
        height: 30px;
        padding: 0 14px;
        text-decoration: none !important;
        border: 2px solid white;
        color: white !important;
        box-sizing: border-box;
        background-color: transparent;
        font-size: 12px;
        font-weight: 500;
        text-transform: uppercase;
        border-radius: 100px;

        &:hover {
          background-color: white;
          color: $off-black !important;
        }
      }
    }
  }
  .frontpage-section .card h1 {
    font-size: 1.375rem;
    line-height: 120%;
  }
}

